[tool.poetry]
name = "tsp"
version = "0.1.0"
description = ""
authors = ["Botode <jacketch87@yandex.ru>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
networkx = "^2.8"
ortools = "^9.3.10497"
matplotlib = "^3.5.1"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
